FIX: Use ember component for collapsing instead of yanking into a container (#427)
Use ember component for collapsing instead of yanking into a container

A few bugs were occurring:
- When editing the youtube URL to something else, the lazyYT invocation
was causing Ember to error out when clearing child nodes, because of the
way collapsing was done. This caused the edit to not show up properly
- The title kept getting added when a new message appeared in the chat
because we were redecorating every message very often.

Using the ember component will make sure it renders nicely with the
lifecycle of the message and maybe also we can reuse it for images?

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -608,10 +608,15 @@ body.composer-open .topic-chat-float-container {
         }
       }
 
-      .lazyYT-collapsible[hidden],
-      .lazyYT-collapsible-open[hidden],
-      .lazyYT-collapsible-closed[hidden] {
-        display: none;
+      .tc-message-collapsible-button {
+        background: transparent;
+        padding: unset;
+
+        &:hover {
+          .d-icon {
+            color: var(--primary);
+          }
+        }
       }
     }
     .tc-message-edited {
